small text alignment fix

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1255,11 +1255,12 @@ body {
 }
 
 .match-event-header-wrapper .feather {
-    height: 10px;
-    width: 10px;
-    min-height: 10px;
-    min-width: 10px;
+    height: 8px;
+    width: 8px;
+    min-height: 8px;
+    min-width: 8px;
     fill: rgb(218, 218, 218);
+    -webkit-text-fill-color: rgb(218, 218, 218);
     color: rgb(218, 218, 218);
 }
 
@@ -1271,6 +1272,7 @@ body {
     padding: 0.3rem;
     border-radius: 4px;
     transform: var(--card-grow-before);
+    text-align: center;
 }
 
 .match-event-header:hover {
@@ -2644,6 +2646,12 @@ body {
         flex-direction: column;
     }
 
+    .match-event-header-wrapper .feather {
+        fill: rgb(218, 218, 218);
+        -webkit-text-fill-color: rgb(218, 218, 218);
+        color: rgb(218, 218, 218);
+    }
+
     .match-card-header {
         justify-content: center;
         padding-left: 0;
@@ -2823,6 +2831,12 @@ body {
 
     .match-event-header-wrapper {
         flex-direction: column;
+    }
+
+    .match-event-header-wrapper .feather {
+        fill: rgb(218, 218, 218);
+        -webkit-text-fill-color: rgb(218, 218, 218);
+        color: rgb(218, 218, 218);
     }
 
     .match-card-wrapper {
@@ -3058,6 +3072,16 @@ body {
 
     .player-info {
         align-items: center;
+    }
+
+    .match-event-header-wrapper {
+        flex-direction: column;
+    }
+
+    .match-event-header-wrapper .feather {
+        fill: rgb(218, 218, 218);
+        -webkit-text-fill-color: rgb(218, 218, 218);
+        color: rgb(218, 218, 218);
     }
 
     .main-player-background .player-tag {
